# rust-static-site

./: Cargo.toml  build.sh  index.html  run.sh
content/: index.md  page-one.md  page-two.md  test.md
src/: lib.rs  main.rs  model.rs
templates/: error.html  layout.html  page.html
