[package]
name = "grunge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.10"
askama_escape = { version = "0.10" }
glob = "0.3.0"
pulldown-cmark = "0.8"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"