[package]
name = "grunge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
askama = "0.10"
askama_escape = { version = "0.10" }
chrono = "0.4.19"
console_error_panic_hook = "0.1.6"
glob = "0.3.0"
js-sys = "0.3.55"
pulldown-cmark = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0.59"
toml = "0.5"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.28"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'Headers',
  'HtmlElement',
  'Node',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]