[package]
name = "bundle"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
askama = { version = "0.10", default-features = false }
chrono = "0.4.19"
console_error_panic_hook = "0.1.6"
glob = "0.3.0"
pulldown-cmark = { version = "0.8", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
toml = { version = "0.5", default-features = false }
wasm-bindgen = { version = "0.2.78" }
wee_alloc = "0.4.5"

# askama_escape = { version = "0.10", default-features = false }
# js-sys = "0.3.55"
# wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3.4"
features = []

[package.metadata.wasm-pack.profile.release]
wasm-opt = false